<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agenda</string>
    <string name="action_settings">Settings</string>
    <string name="title_register_activity">Registro</string>
    <string name="title_list_activity">Listado</string>
    <string name="lb_name_surname">Nombre y Apellidos</string>
    <string name="lb_email">E-mail</string>
    <string name="lb_telephone">Teléfono fijo</string>
    <string name="lb_mobile">Teléfono móvil</string>
    <string name="lb_birthdate">Fecha de Nacimiento</string>
    <string name="lb_debts">Deudas</string>
    <string name="lb_save">Guardar</string>
    <string name="lb_cancel">Cancelar</string>
    <string name="lb_close">Cerrar</string>
    <string name="lb_register">Registrar</string>
    <string name="lb_list">Listar</string>
    <string name="msg_date_error">Comprueba el formato de fecha</string>
    <string name="lb_call_phone">Llamar al fijo</string>
    <string name="lb_call_mobile">Llamar al móvil</string>
    <string name="lb_edit">Editar</string>
    <string name="lb_send_email">Enviar e-mail</string>
    <string name="lb_delete">Eliminar</string>
    <string name="lb_see_details">Ver detalles</string>
    <string name="lb_see_map">¿Dónde vive?</string>
    <string name="lb_are_you_sure">¿Está seguro?</string>
    <string name="lb_yes">Si</string>
    <string name="lb_no">No</string>
    <string name="title_details_activity">Detalles</string>
    <string name="msg_saved">Los datos se han guardado con éxito</string>
    <string name="msg_deleted">El contacto se ha eliminado</string>
    <string name="msg_select_email">Selecciona aplicación</string>

</resources>
