<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/lb_save" />

    <Button
        android:id="@+id/btClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="37dp"
        android:layout_toEndOf="@+id/btSave"
        android:text="@string/lb_close" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/lb_name_surname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etName"
        android:ems="10"
        android:hint="@string/lb_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etTelephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etEmail"
        android:ems="10"
        android:hint="@string/lb_telephone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etTelephone"
        android:ems="10"
        android:hint="@string/lb_mobile"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etBirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etMobile"
        android:ems="10"
        android:hint="@string/lb_birthdate"
        android:inputType="date" />

    <ImageButton
        android:id="@+id/ibPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etMobile"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/etName"
        android:layout_toEndOf="@+id/btClose"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_add" />
</RelativeLayout>
